[gd_scene load_steps=3 format=2]

[ext_resource path="res://TestMain.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-near-sdk/utils/CryptoHelper.cs" type="Script" id=2]

[node name="TestMain" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 216.0
margin_top = 80.0
margin_right = 704.0
margin_bottom = 448.0
rect_min_size = Vector2( 424, 304 )
text = "Result string"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 188.0
margin_bottom = 109.0
text = "View call"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 40.0
margin_right = 276.0
margin_bottom = 60.0
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CryptoHelperTest" type="Node" parent="."]
script = ExtResource( 2 )

[node name="InvalidMethodButton" type="Button" parent="."]
margin_left = 40.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 176.0
text = "Invalid method call"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvalidAccountButton" type="Button" parent="."]
margin_left = 48.0
margin_top = 192.0
margin_right = 193.0
margin_bottom = 232.0
text = "Invalid account call"

[node name="LoginButton" type="Button" parent="."]
margin_left = 408.0
margin_top = 24.0
margin_right = 496.0
margin_bottom = 56.0
text = "Sign In"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserLabel" type="Label" parent="."]
margin_left = 520.0
margin_top = 24.0
margin_right = 768.0
margin_bottom = 60.0
text = "Not signed in"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="InvalidMethodButton" to="." method="_on_InvalidMethodButton_pressed"]
[connection signal="pressed" from="InvalidAccountButton" to="." method="_on_InvalidAccountButton_pressed"]
[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
